{
    "name": "Controlls",
    "maps": [
        {
            "name": "Default",
            "id": "2a89295c-9056-40fe-9dca-6133d4d70847",
            "actions": [
                {
                    "name": "HideGUI",
                    "type": "Button",
                    "id": "61af1495-ab43-43ed-9151-6938091ee903",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MarkWall",
                    "type": "Button",
                    "id": "cce38806-adf8-4e09-ae2f-01863096c1fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ApplyWall",
                    "type": "Button",
                    "id": "03ebe26d-3974-41cd-be9d-2a09af7ed910",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteWall",
                    "type": "Button",
                    "id": "3e57a0c3-75d6-4067-8357-0c35ea8d1991",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04262671-4c70-4cac-993f-4fc8558eafd2",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HideGUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8c36ff8-31fa-4eed-a1d9-d21344fa1aa3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HideGUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53ef69e4-ec69-427c-8183-e76a8193bbf8",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MarkWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "919d6208-f912-4c36-a695-595ca85c4ae6",
                    "path": "<OculusTouchController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00ae820f-2840-432f-a0ab-073e3a8dab80",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<OculusTouchController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}